# Rust-Chip8

./: .gitignore  Cargo.toml  README.md  gaming.txt
src/: lib.rs  main.rs
src/hardware/: cpu.rs  instruction.rs  keyboard.rs  mod.rs
