[package]
name = "chip8-emulator"
version = "0.1.0"
authors = ["Tim Lazarus <me@timlazarus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
pixels = "0.2.0"
winit = "0.24.0"
winit_input_helper = "0.9.0"
rodio = "0.11.0"